--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.idea/
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.ico
+*.svg
+
+*_local.*
+*.log
+*.log.*
