--- a/deploy/local_xxim/docker-compose.yaml
+++ b/deploy/local_xxim/docker-compose.yaml
@@ -47,3 +47,29 @@ services:
     networks:
       imcloudx:
         ipv4_address: 172.88.10.12 # http://172.88.10.12:8080
+
+  mysql:
+    image: mysql:8.0.33
+    container_name: mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+    networks:
+      imcloudx:
+        ipv4_address: 172.88.10.21 # 172.88.10.21:3306
+    volumes:
+      - ./data/mysql:/var/lib/mysql
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    networks:
+      imcloudx:
+        ipv4_address: 172.88.10.22 # 172.88.10.22:6379
+    volumes:
+      - ./data/redis:/data
+    command:
+      - "redis-server"
+      - "--appendonly"
+      - "yes"
+      - "--requirepass"
+      - "123456"
