feat: add RichArticle logic

--- a/other/build-doc/Dockerfile
+++ b/other/build-doc/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:19.0-buster
+FROM node:buster
 WORKDIR /app
 RUN git clone https://github.com/cherish-chat/xx-doc.git --depth=1
 WORKDIR /app/xx-doc/docs
